--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "chai": "^4.0.0",
     "jest": "^20.0.4"
+  },
+  "dependencies": {
+    "lodash.uniq": "^4.5.0"
   }
 }
