--- a/package.json
+++ b/package.json
@@ -13,7 +13,5 @@
     "chai": "^4.0.0",
     "jest": "^20.0.4"
   },
-  "dependencies": {
-    "lodash.uniq": "^4.5.0"
-  }
+  "dependencies": {}
 }
