--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/node:8.9.0
     steps:
@@ -31,4 +31,4 @@ workflows:
   version: 2
   test:
     jobs:
-      - build
+      - test
