--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "chai": "^4.0.0",
     "jest": "^20.0.4"
   },
-  "dependencies": {
-    "airport-codes": "^1.0.2"
-  }
+  "dependencies": {}
 }
