--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Region information for Luxury Escapes",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest",
+    "test": "./node_modules/.bin/jest && ./node_modules/.bin/eslint ./",
     "test:watch": "./node_modules/.bin/jest --watch"
   },
   "author": "Eddie McLean",
@@ -12,6 +12,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "chai": "^4.0.0",
+    "eslint": "^5.5.0",
+    "eslint-plugin-es5": "^1.3.1",
     "jest": "^20.0.4"
   },
   "dependencies": {}
