--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "eslint-plugin-es5": "^1.3.1",
     "jest": "^20.0.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "camelcase-keys": "^6.0.0"
+  }
 }
