--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "@luxuryescapes/lib-regions",
-  "version": "3.9.1",
+  "version": "4.0.0",
   "description": "Region information for Luxury Escapes",
-  "main": "index.js",
-  "scripts": {
-    "test": "./node_modules/.bin/jest && ./node_modules/.bin/eslint ./ --env es6",
-    "test:watch": "./node_modules/.bin/jest --watch"
-  },
-  "author": "Eddie McLean",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "repository": "https://github.com/brandsExclusive/lib-regions",
   "license": "UNLICENSED",
+  "files": [
+    "lib",
+    "src"
+  ],
+  "scripts": {
+    "build": "rm -rf lib && tsc",
+    "test": "ts-node src/index.test.ts",
+    "lint": "tslint -p tsconfig.json",
+    "lint-fix": "tslint --fix -p tsconfig.json",
+    "prepare": "yarn run build",
+    "prepublishOnly": "yarn test && yarn run lint",
+    "preversion": "yarn run lint",
+    "postversion": "git push && git push --tags"
+  },
   "devDependencies": {
     "chai": "^4.0.0",
     "eslint": "^5.5.0",
     "eslint-plugin-es5": "^1.3.1",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
+    "typescript": "^3.6.2"
   }
 }
