--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "rm -rf lib && tsc",
-    "test": "ts-node src/index.test.ts",
+    "test": "mocha -r ts-node/register src/index.test.ts",
     "lint": "tslint -p tsconfig.json",
     "lint-fix": "tslint --fix -p tsconfig.json",
     "prepare": "yarn run build",
@@ -21,10 +21,10 @@
     "postversion": "git push && git push --tags"
   },
   "devDependencies": {
-    "chai": "^4.0.0",
-    "eslint": "^5.5.0",
-    "eslint-plugin-es5": "^1.3.1",
-    "jest": "^20.0.4",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
