--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "mocha": "^6.2.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
-  },
-  "dependencies": {
+    "typescript": "^3.6.2",
     "rimraf": "^3.0.2"
   }
 }
