Add a utility function to get a list of valid dynamic keys in an array. ES2017 is needed to use Object.keys or Object.values

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,14 @@
     "rootDir": "./src",
     "target": "es5",
     "declaration": true,
-    "lib": ["dom", "es7"],
+    "lib": [
+      "dom",
+      "es7",
+      "es2017"
+    ],
     "module": "commonjs",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
   "exclude": [
     "*/**.test.ts"
