--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/node:16.13.1
+      - image: cimg/16.20.0
     steps:
       - checkout
 
