--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,65 @@
 version: 2
+
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/node:14.18.2
+
 jobs:
-  test:
-    docker:
-      - image: circleci/node:14.18.2
+  build:
+    <<: *defaults
     steps:
       - checkout
 
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
-            - v1-dependencies-
+            - v1-dependencies
 
       - run: yarn install
 
       - save_cache:
           key: v1-dependencies-{{ checksum "yarn.lock" }}
           paths:
-            - ~/.cache/yarn
             - ./node_modules
 
       - run: yarn test
-      - run: yarn lint
+      - run: yarn run lint
+      - run: yarn build
+
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - .
+
+  publish:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Authenticate with registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+      - run:
+          name: Publish package
+          command: npm publish
+
+workflows:
+  version: 2
+  build-publish:
+    jobs:
+      - build:
+          context: LE
+      - publish:
+          context: LE
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 
 experimental:
   notify:
     branches:
       only:
         - master
-
-workflows:
-  version: 2
-  test:
-    jobs:
-      - test
