--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ defaults: &defaults
   docker:
     - image: cimg/node:14.18.2
 
+feature-branches: &feature-branches
+  branches:
+    ignore: master
+
 jobs:
   build:
     <<: *defaults
@@ -44,6 +48,25 @@ jobs:
           name: Publish package
           command: npm publish
 
+  publish-beta:
+    <<: *defaults
+    type: approval
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Authenticate with registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+      - run:
+          name: View pre-publish packages
+          command: npm view @luxuryescapes/lib-regions versions --json
+      - run:
+          name: Publish package
+          command: npm publish --tag beta
+      - run:
+          name: View post-pubish packages
+          command: sleep 5 && npm view @luxuryescapes/lib-regions versions --json
+
 workflows:
   version: 2
   build-publish:
@@ -57,6 +80,18 @@ workflows:
           filters:
             branches:
               only: master
+
+      - hold-publish-beta:
+          type: approval
+          requires:
+            - build
+          filters: *feature-branches
+
+      - publish-beta:
+          context: LE
+          requires:
+            - hold-publish-beta
+          filters: *feature-branches
 
 experimental:
   notify:
