[OPEX-3004] Improved phone number validation (#405)
* add this package

* 5.6.51-beta.0

* alt phone number validation

* ordered import

* lint

* 5.6.51-beta.1

* try min import?

* 5.6.51-beta.2

* try a different lib

* linting

* 5.6.51-beta.3

* try dynamic import

* lint

* linting

* 5.6.51-beta.4

* try thius

* 5.6.51-beta.5

* add phone number validation lib

* linting

* 5.6.51-beta.6

* 5.6.51-beta.7

* Update package ver

* why

* why

* loosen it to allow landline where we can

* 5.6.52-beta.0

* add separate country code list

* linting

* 5.6.52-beta.1

* update package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luxuryescapes/lib-regions",
-  "version": "5.6.50",
+  "version": "5.6.51",
   "description": "Region information for Luxury Escapes",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -30,5 +30,8 @@
     "ts-node": "^10.9.1",
     "tslint": "^5.20.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "phone": "^3.1.58"
   }
 }
